Fixed horizontal scroll bar'

--- a/styles/banner.css
+++ b/styles/banner.css
@@ -1,5 +1,5 @@
 #banner {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   overflow-x: hidden;
   position: relative;
@@ -12,7 +12,7 @@
 }
 
 #bannerContainer {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   position: absolute;
   z-index: 2;
@@ -311,7 +311,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
   transition: all ease 200ms;
