--- a/styles/index.css
+++ b/styles/index.css
@@ -3,7 +3,3 @@
   padding: 0;
   font-family: 'Open Sans';
 }
-
-/* body {
-  overflow-x: hidden;
-} */
